--- a/qr-code-component-main/css/style.css
+++ b/qr-code-component-main/css/style.css
@@ -4,36 +4,36 @@
     padding: 0;
 }
 body{
-    
-    font-family: 'Outfit', sans-serif;
     background-color: hsl(212, 45%, 89%);
-    display: flex;
+    font-family: 'Outfit', sans-serif;
     justify-content: center;
+    display: flex;
     align-items: center;
-    margin-top: 10%;
 }
 .container{
     max-width: 350px;
+    margin-top: 10%;
 }
 .card img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
     border-radius: 15px;
 }
 .card{
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 16px;
     text-align: center;
+    background-color: white;
+    border-radius: 17px;
+    padding: 20px;
+    
 }
-p{
-    font-size: 14px;
-    color: hsl(220, 15%, 55%);
-    padding-bottom: 20px;
+.card-content{
+    padding: 22px 10px;
 }
 h2{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: hsl(218, 44%, 22%)
+    padding-bottom: 15px;
+    color:  hsl(218, 44%, 22%)
+}
+p{
+    color:  hsl(220, 15%, 55%);
+    font-size: 14px;
 }
